# Hallucitation

./: .gitignore  LICENSE  README.md  WRITTEN-COMPONENT.md  pyproject.toml
.github/workflows/: ci.yml
citation_cleaner/: __init__.py  __main__.py  cli.py  crossref.py  extract.py  openalex.py  report.py  score.py  verify.py  webapp.py
docs/examples/: evaluation.json
hallucitation/: __init__.py  __main__.py  cli.py  crossref.py  extract.py  openalex.py  parse.py  report.py  score.py  verify.py  webapp.py
scripts/: build_fixtures.py
tests/: conftest.py  test_cli.py  test_extract.py  test_parse.py  test_report.py  test_score.py  test_verify.py  test_webapp.py
