[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citation-cleaner"
version = "0.1.0"
description = "Find hallucinated citations in research PDFs."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Teymour Davoudi" }]
requires-python = ">=3.11"
keywords = ["citations", "hallucinations", "research", "pdf", "scholarly"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.27",
    "pdfplumber>=0.11",
    "pypdf>=4.0",
    "rapidfuzz>=3.6",
    "reportlab>=4.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-httpx>=0.30",
]

[project.scripts]
citation-cleaner = "citation_cleaner.cli:main"

[tool.setuptools.packages.find]
include = ["citation_cleaner*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
